fixed pom and unused imports